kubernetes/apps/ai-system/langfuse/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
  namespace: ai-system
  labels:
    security: oidc-protected
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
    - name: envoy-internal
      namespace: network
  hostnames:
    - "langfuse.matherly.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: langfuse-web
          port: 3000
